# fastapi_p30_task

./: .gitignore  Makefile  TODO  main.py  pyproject.toml  test_main.http
core/: __init__.py  celery_app.py  config.py
database/: __init__.py  base_model.py  categories.py  products.py  users.py
migrations/: env.py
migrations/versions/: 8ef17249dbaa_initial_commit.py  a37b805b9b7d_initial_commit.py
routers/: __init__.py  auth.py  categories.py  products.py  users.py
schemas/: __init__.py  auth.py  categories.py  products.py  users.py
services/: otp_services.py
templates/: verification_email.html
utils/: create_certificate.py  security.py  utils.py
